--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -1,7 +1,32 @@
 <h1>{{ article.title }}</h1>
+
+{% if section.settings.enable_author %}
 <small>{{ article.author }}</small>
+{% else %}
+{% if section.settings.enable_published_date%}
+{% endif %}
 <time datetime="{{ article.published_at |date:'%Y-%m-%d' }}"> {{ article.published_at | date: '%Y-%m-%d' }}</time>
-<img src="{{ article.image |image_url:'large'}}" alt="{{ article.image.alt }}"/>
-<div class="">
+<img src="{{ article.image |img_url:'large'}}" alt="{{ article.image.alt }}"/>
+<div class="article-content">
 {{ article.content }}
 </div>
+
+{%- schema -%}
+{
+"name":"Template-Articale",
+"settings": [
+    {
+    "type":"checkbox",
+    "id": "enable_author",
+    "default":true,
+    "label":"Display Author Name "
+    },
+   {
+        "type":"checkbox",
+        "id": "enable_published_date",
+        "default":true,
+        "label":"Display Published Date "
+        },
+],
+}
+{%- endschema -%}
