--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -29,5 +29,27 @@
         "label":"Display Published Date "
         },
 ],
+"blocks": [
+    {
+        "type":"article_title",
+        "name":"Title",
+        "limit": 1
+    },
+    {
+        "type":"article_author",
+        "name":"Author",
+        "limit": 1
+    },
+    {
+        "type":"article_published_date",
+        "name":"Published Date",
+        "limit": 1
+    },
+    {
+        "type":"featured_image",
+        "name":"Tumbnail",
+        "limit": 1
+    },
+]
 }
 {%- endschema -%}
