--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -1,3 +1,12 @@
+{% for  block in section.blocks%} 
+{% case variavle %}
+    {% when condition %}
+        {% else %}
+{% endcase %}
+
+{% endfor %}
+
+
 <h1>{{ article.title }}</h1>
 
 {% if section.settings.enable_author %}
