--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -1,3 +1,4 @@
+<article>
 {% for block in section.blocks %}
   {% case block.type %}
     {% when 'article_title' %}
@@ -22,6 +23,7 @@
 
   {% endcase %}
 {% endfor %}
+</article>
 
 {%- schema -%}
 {
