--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -647,6 +647,17 @@ video {
 
 
 }
+.blogPage_article_container{
+  width: 100%;
+  height: 100%;
+  font-size: 30px;
+  font-weight: bold;
+
+}
+.blogPage_title{
+  color: #df1a1a;
+  text-align: center;
+}
 /* Media query for md breakpoint */
 @media (min-width: 768px) {
   .md\\:flex {
