--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -19,7 +19,15 @@
           </time>
         {% endif %}
       {% when 'featured_image' %}
-        <img src="{{ article.image |img_url:'large'}}" alt="{{ article.image.alt }}" width="" height="">
+        <div class="block_img">
+        {% if article.image != blank %}
+          <img src="{{ article.image |img_url:'large'}}" alt="{{ article.image.alt }}" width="" height="">
+          {% else %}
+           {%- assign placeHolder_Image = 'lifestyle-2'-%}
+          {{ placeHolder_Image || placeholder_svg_tag:"w-full"}}
+          {% endif %}
+        </div>
+        
       {% when 'article_content' %}
         <div class="article-content">
           {{ article.content }}
