D:\shopify-Theme-Devlopment\mydown\sections\template-article.liquid

--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -38,6 +38,11 @@
   {% endfor %}
 </article>
 
+{% if  blog.comments_enabled? %}
+  {% else %}
+  no comment avaliable
+{% endif %}
+
 {%- schema -%}
 {
   "name": "Template-Articale",
