--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -51,6 +51,10 @@
               <p class="comment_conte">{{ comment.content }}</p>
             </div>
           {% endfor %}
+          {% if paginate.pages >1 %}
+          {{ paginate |  default_pagination }}
+          {% endif %}
+
         {% endpaginate %}
       </div>
     {% else %}
