--- a/sections/template-cart.liquid
+++ b/sections/template-cart.liquid
@@ -1,9 +1,18 @@
 {% if cart.item_count > 0 %}
+<div class="cartsection">
+  <div class="cart_MEnu-container">
+  <h1 class="cartContainer_heading_section">Your Cart</h1>
+  <a class="ancharTag-link" href="{{ routes.all_products_collection_url }}"> Continue Shoping </a>
+  </div>
+</div>
 
-    {% else %}
-    <div class="Cart_meseg_section">
+{% else %}
+  <div class="Cart_meseg_section">
     <div class="Cart_MEnu_section">
-    <h1 class="msg_headimg">you cart empty</h1>
+      <h1 class="msg_headimg">you cart empty</h1>
+      <div class="link-section-cart">
+      <a class="ancharTag-link" href="{{ routes.all_products_collection_url }}"> Continue Shoping </a>
+      </div>
     </div>
-    </div>
-    {% endif %}
+  </div>
+{% endif %}
