--- a/sections/template-cart.liquid
+++ b/sections/template-cart.liquid
@@ -1,17 +1,49 @@
 {% if cart.item_count > 0 %}
-<div class="cartsection">
-  <div class="cart_MEnu-container">
-  <h1 class="cartContainer_heading_section">Your Cart</h1>
-  <a class="ancharTag-link" href="{{ routes.all_products_collection_url }}"> Continue Shoping </a>
+  <div class="cartsection">
+    <div class="cart_container">
+      <div class="cart_MEnu-container">
+        <h1 class="cartContainer_heading_section">Your Cart</h1>
+        <a class="ancharTag-link" href="{{ routes.all_products_collection_url }}"> Continue Shoping </a>
+      </div>
+    </div>
+    <div class="display_cart_item_Section">
+      <form action="{{ routes.cart_url }}" method="post" novalidate>
+      <table class="table-section">
+        <thead class="table_head">
+        <th class="table_th_tag">Product</th>
+        <th class="table_th_tag">Quality</th>
+        <th class="table_th_tag">Product Price</th>
+        </thead>
+        <tbody class="table-body">
+{% for item in cart.items %}
+<tr class="table-row">
+  <td>
+  <a href="{{ item.url }}">
+  {% if item.image %}
+
+  {% else %}
+  {{ 'product-1'|placeholder_svg_tag:'placeholder-svg-tags' }}
+  {% endif %}
+  </a>
+  </td>
+  <td></td>
+  <td></td>
+  <td></td>
+
+</tr>
+{% endfor %}
+        </tbody>
+      </table>
+      </form>
+    </div>
   </div>
-</div>
 
 {% else %}
   <div class="Cart_meseg_section">
     <div class="Cart_MEnu_section">
       <h1 class="msg_headimg">you cart empty</h1>
       <div class="link-section-cart">
-      <a class="ancharTag-link" href="{{ routes.all_products_collection_url }}"> Continue Shoping </a>
+        <a class="ancharTag-link" href="{{ routes.all_products_collection_url }}"> Continue Shoping </a>
       </div>
     </div>
   </div>
