--- a/sections/template-cart.liquid
+++ b/sections/template-cart.liquid
@@ -50,12 +50,24 @@
                     id="updates_{{ forloop.index }}"
                   >
                 </td>
-                <td></td>
+                <td class="cart_total_price">
+                {{ item.line_price | money }}
+                </td>
               </tr>
             {% endfor %}
           </tbody>
         </table>
+
+        <div class="text-area-sections">
+        <div class="text-area-container">
+        <div class="text-area-container-menu">
+          <label for="cart_notes"  class="lable-text">Notes</label>
+        <textarea name="note" id="cart_notes" cols="30" rows="10" class="display_textArea_data"></textarea>
+        </div>
+        </div>
+        </div>
       </form>
+
     </div>
   </div>
 
