--- a/sections/template-cart.liquid
+++ b/sections/template-cart.liquid
@@ -1,10 +1,9 @@
-
-  {% if cart.item_count > 0 %}
+{% if cart.item_count > 0 %}
     <div class="cartsection">
       <div class="cart_container">
         <div class="cart_MEnu-container">
           <h1 class="cartContainer_heading_section">Your Cart</h1>
-          <a class="ancharTag-link" href="{{ routes.all_products_collection_url }}"> Continue Shoping </a>
+          <a class="ancharTag-link" href="{{ routes.all_products_collection_url }}"> Continuesssss Shoping </a>
         </div>
       </div>
       <div class="display_cart_item_Section">
@@ -85,7 +84,7 @@
           <a class="ancharTag-link" href="{{ routes.all_products_collection_url }}"> Continue Shoping </a>
         </div>
       </div>
-    </div>
+    </div> 
   {% endif %}
 
 
