--- a/sections/template-cart.liquid
+++ b/sections/template-cart.liquid
@@ -3,7 +3,7 @@
     <div class="cart_container">
       <div class="cart_MEnu-container">
         <h1 class="cartContainer_heading_section">Your Cart</h1>
-        <a class="ancharTag-link-rigth" href="{{ routes.all_products_collection_url }}"> Continuesssss Shoping riya</a>
+        <a class="ancharTag-link-rigth" href="{{ routes.all_products_collection_url }}"> ContinueShoping riya</a>
       </div>
       <hr>
     </div>
