--- a/sections/template-cart.liquid
+++ b/sections/template-cart.liquid
@@ -18,6 +18,7 @@
           <tbody class="table-body">
             {% for item in cart.items %}
               <tr class="table-row">
+                <div>
                 <td class="tableData">
                   <a href="{{ item.url }}">
                     {% if item.image %}
@@ -36,10 +37,12 @@
                 <td class="tableData">
                   <a href="{{ item.url }}" class="product_title">{{ item.product.title | truncatewords: 4 }}</a>
                   <span class="table-span">{{ item.variant.title }}</span>
+
                   <a href="{{ routes.cart_change_url }}?line={{ forloop.index }}&quantity=0" class="change-cart-url"
                     >Remove</a
                   >
                 </td>
+              </div>
                 <td class="product-quantity-cart">
                   <input
                     type="number"
