--- a/sections/template-cart.liquid
+++ b/sections/template-cart.liquid
@@ -18,7 +18,7 @@
           <tbody class="table-body">
             {% for item in cart.items %}
               <tr class="table-row">
-                <div>
+                <div class="cotenr">
                 <td class="tableData">
                   <a href="{{ item.url }}">
                     {% if item.image %}
@@ -42,6 +42,7 @@
                     >Remove</a
                   >
                 </td>
+            
               </div>
                 <td class="product-quantity-cart">
                   <input
