--- a/sections/template-cart.liquid
+++ b/sections/template-cart.liquid
@@ -26,8 +26,8 @@
                         src="{{item.image | img_url:'small' }}"
                         alt="{{ item.filter |escape }}"
                         class="product_img"
-                        width="50%"
-                        height="50%"
+                        width="500px"
+                        height="500px"
                       >
                     {% else %}
                       {{ 'product-1' | placeholder_svg_tag: 'placeholder-svg-tags' }}
