--- a/sections/template-cart.liquid
+++ b/sections/template-cart.liquid
@@ -46,6 +46,7 @@
               </div>
                 <td class="product-quantity-cart">
                   <input
+                    class="quantity_in"
                     type="number"
                     name="updates[]"
                     value="{{ item.quantity }}"
