--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -798,9 +798,11 @@ tr{
   width: 303px;
   height: auto;
   /* max-width: 100%; */
-  display: block;
-  object-fit: cover;
-  image-rendering: crisp-edges;
+  display: block;            /* Removes any space below the image */
+  object-fit: cover;         /* Ensure the image covers the container without distortion */
+  image-rendering: crisp-edges; /* Sharpens the image, especially useful for pixel art or smaller images */
+  image-rendering: -webkit-optimize-contrast; /* For better image rendering on WebKit browsers */
+  image-rendering: pixelated;
 }
 .table-body{
   height: 100vh;
